fix align problem

--- a/project1/css/profile_view/user_profile.css
+++ b/project1/css/profile_view/user_profile.css
@@ -32,9 +32,6 @@ nav {
     background-size:     cover;
 }
 
-#profile{
-  margin-left: 45px
-}
 
 #fbimg{
   height: 25px;
